syntax = "proto3";
package neoshowcase.protobuf;
option go_package = "github.com/traPtitech/neoshowcase/pkg/interface/grpc/pb";

import "google/protobuf/empty.proto";

service StaticSiteService {
  rpc Reload (google.protobuf.Empty) returns (google.protobuf.Empty);
}
